# master-python-packaging

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  test-package.ipynb
.ipynb_checkpoints/: test-package-checkpoint.ipynb  test-package-local-checkpoint.ipynb
dapro/: dapro_engine.py
dapro.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dapro/data_eda/: pro_eda.py
dapro/data_importing/: pro_import.py
dapro/data_viz/: pro_dataviz.py
dapro/input/: __init__.py
dapro/input/config/: hyperparameter.json
test-package/: test-package-installation.ipynb  test-package-local.ipynb
test-package/.ipynb_checkpoints/: test-package-installation-checkpoint.ipynb
test-package/config/: hyperparameter_test.json
